<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgVila"
        android:layout_width="fill_parent"
        android:layout_height="280dp"
        android:src="@drawable/fundo"/>
    <TextView
        android:id="@+id/lb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgVila"/>
    <TextView
        android:id="@+id/labelNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stLbNome"
        android:layout_below="@+id/lb1"
        />
    <EditText
        android:id="@+id/txNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelNome"
        android:hint="@string/stTxNome"/>


    <TextView
        android:id="@+id/labelIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stLbIdade"
        android:layout_below="@+id/txNome"/>
    <EditText
        android:id="@+id/txIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelIdade"
        android:hint="@string/stTxIdade"/>

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txIdade"
        android:text="@string/stLbEmail"/>
    <EditText
        android:id="@+id/txEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelEmail"
        android:hint="@string/stTxEmail"/>
    <TextView
        android:id="@+id/lb4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txEmail"/>
    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb4"
        android:text="@string/stBtnEnviar"/>
</RelativeLayout>